--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-carouselamos": "^3.2.0",
     "rxjs": "^5.0.0-beta.14",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "zone.js": "^0.8.19"
