--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^5.2.11",
     "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.0",
@@ -28,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-carouselamos": "^3.2.0",
+    "ngx-restangular": "^3.0.0",
     "rxjs": "^5.0.0-beta.14",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "zone.js": "^0.8.19"
