--- a/package.json
+++ b/package.json
@@ -13,33 +13,36 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.3",
-    "@angular/animations": "^5.2.11",
-    "@angular/cdk": "^5.2.5",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/flex-layout": "^5.0.0-beta.14",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^7.1.1",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
+    "@ngu/carousel": "^1.5.2",
     "@types/google.analytics": "0.0.39",
+    "angular2-cookie-law": "^6.0.4",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "ng2-carouselamos": "^3.2.0",
+    "latest-version": "^4.0.0",
     "ngx-device-detector": "^1.3.0",
-    "ngx-restangular": "^3.0.0",
-    "rxjs": "^5.0.0-beta.14",
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.6",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.11",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.1",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/language-service": "^7.1.1",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -54,6 +57,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~3.1.6"
   }
 }
