feat: add assets to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,12 @@ Thumbs.db
 
 node_modules
 keys.ts
+
+src/assets/images/team/
+src/assets/images/comingsoon.jpg
+src/assets/images/fanshop/
+src/assets/images/gallery/
+src/assets/images/matchballspende/
+src/assets/images/news/
+src/assets/images/team/
+src/assets/images/vorstand/
