Add Angular Universal

--- a/angular.json
+++ b/angular.json
@@ -11,14 +11,24 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/hvtdp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              {
+                "glob": "webgooglemaps.js",
+                "input": "node_modules/web-google-maps/dist",
+                "output": "./"
+              },
+              {
+                "glob": "webgooglemaps/*",
+                "input": "node_modules/web-google-maps/dist",
+                "output": "./"
+              }
             ],
             "styles": [
               "src/styles.css"
@@ -43,6 +53,14 @@
                 }
               ]
             }
+          }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist-server",
+            "main": "src/main.server.ts",
+            "tsConfig": "src/tsconfig.server.json"
           }
         },
         "serve": {
