--- a/package.json
+++ b/package.json
@@ -4,58 +4,66 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "bin/npm-install; concurrently npm:universal-build npm:build; echo 'normal: http://localhost:4200 universal: http://localhost:4000'; concurrently npm:dev-server npm:universal-dev-server",
+    "dev-server": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "universal-dev-server": "ts-node -T --project src/tsconfig.server.json universal-server.ts",
+    "universal-build": "ng run hvtdp:server",
+    "prerender": "./node_modules/.bin/ts-node ./src/prerender.ts"
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.3",
-    "@angular/animations": "^7.1.1",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
+    "@angular/animations": "^7.1.3",
+    "@angular/cdk": "^7.2.0",
+    "@angular/common": "^7.1.3",
+    "@angular/compiler": "^7.1.3",
+    "@angular/core": "^7.1.3",
+    "@angular/flex-layout": "^7.0.0-beta.22",
+    "@angular/forms": "^7.1.3",
+    "@angular/http": "^7.1.3",
+    "@angular/material": "^7.2.0",
+    "@angular/platform-browser": "^7.1.3",
+    "@angular/platform-browser-dynamic": "^7.1.3",
+    "@angular/platform-server": "^7.1.3",
+    "@angular/router": "^7.1.3",
     "@ngu/carousel": "^1.5.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "@types/google.analytics": "0.0.39",
-    "angular2-cookie-law": "^6.0.4",
-    "core-js": "^2.4.1",
+    "angular2-cookie-law": "^6.2.0",
+    "concurrently": "^4.1.0",
+    "core-js": "^2.6.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "latest-version": "^4.0.0",
-    "ngx-device-detector": "^1.3.0",
+    "ngx-device-detector": "^1.3.5",
     "rxjs": "^6.3.3",
-    "tslib": "^1.9.0",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "zone.js": "^0.8.19"
+    "ts-loader": "^5.3.2",
+    "tslib": "^1.9.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "web-google-maps": "^1.0.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "^7.1.1",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/language-service": "^7.1.1",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular/cli": "^7.1.3",
+    "@angular/compiler-cli": "^7.1.3",
+    "@angular/language-service": "^7.1.3",
+    "@types/jasmine": "^2.8.14",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.2",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
+    "ts-node": "^4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~3.1.6"
   }
