--- a/package.json
+++ b/package.json
@@ -12,44 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.3",
-    "@angular/animations": "^7.1.1",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
-    "@ngu/carousel": "^1.5.2",
+    "@agm/core": "^1.0.0-beta.7",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@ngu/carousel": "^1.5.5",
     "@types/google.analytics": "0.0.39",
-    "angular2-cookie-law": "^6.0.4",
-    "core-js": "^2.4.1",
+    "angular2-cookie-law": "^6.2.0",
+    "core-js": "^2.6.9",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "latest-version": "^4.0.0",
-    "ngx-device-detector": "^1.3.0",
-    "rxjs": "^6.3.3",
-    "tslib": "^1.9.0",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "zone.js": "^0.8.19"
+    "ngx-device-detector": "^1.3.9",
+    "rxjs": "^6.5.2",
+    "tslib": "^1.10.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "^7.1.1",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/language-service": "^7.1.1",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.0.118",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
