--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ src/assets/images/matchballspende/
 src/assets/images/news/
 src/assets/images/team/
 src/assets/images/vorstand/
+src/assets/images/pappfan/
 
 #secrets
 hvtdp-2014-f07f6fad2063.json
