--- a/package.json
+++ b/package.json
@@ -12,51 +12,51 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.7",
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
-    "@ngu/carousel": "^1.5.5",
-    "@types/google.analytics": "0.0.39",
-    "angular2-cookie-law": "^6.2.0",
-    "core-js": "^2.6.9",
+    "@agm/core": "^3.0.0-beta.0",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.0.4",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "^11.0.9",
+    "@angular/material": "^11.0.4",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "@ngu/carousel": "^3.0.2",
+    "@types/google.analytics": "0.0.41",
+    "@types/googlemaps": "^3.39.13",
+    "angular2-cookie-law": "^7.0.1",
+    "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "latest-version": "^4.0.0",
-    "ngx-device-detector": "^1.3.9",
-    "rxjs": "^6.5.2",
-    "tslib": "^1.10.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "zone.js": "^0.8.29"
+    "latest-version": "^5.1.0",
+    "ngx-device-detector": "^2.0.5",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.1.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
-    "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.0.118",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.5",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~3.1.6"
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/language-service": "^11.0.9",
+    "@types/jasmine": "^3.6.2",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.14.22",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^6.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5"
   }
 }
