--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ node_modules
 keys.ts
 
 #assets
+src/assets/videos
+src/assets/images/advent/
 src/assets/images/team/
 src/assets/images/comingsoon.jpg
 src/assets/images/fanshop/
