--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ src/assets/images/news/
 src/assets/images/team/
 src/assets/images/vorstand/
 src/assets/images/pappfan/
+src/assets/documents
 
 #secrets
 hvtdp-2014-f07f6fad2063.json
