Update dependencies, Replace Google Maps & Cookie Law

--- a/package.json
+++ b/package.json
@@ -16,58 +16,59 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "~12.0.2",
-    "@angular/cdk": "~12.0.2",
-    "@angular/common": "~12.0.2",
-    "@angular/compiler": "~12.0.2",
-    "@angular/core": "~12.0.2",
-    "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~12.0.2",
-    "@angular/material": "~12.0.2",
-    "@angular/platform-browser": "~12.0.2",
-    "@angular/platform-browser-dynamic": "~12.0.2",
-    "@angular/platform-server": "~12.0.2",
-    "@angular/router": "~12.0.2",
-    "@ngu/carousel": "^3.0.2",
-    "@nguniversal/express-engine": "^12.0.0",
-    "@types/google.analytics": "0.0.41",
-    "@types/googlemaps": "^3.39.13",
-    "@types/hammerjs": "^2.0.39",
-    "angular-in-memory-web-api": "~0.11.0",
-    "angular2-cookie-law": "^7.0.1",
-    "core-js": "^3.8.3",
-    "express": "^4.15.2",
+    "@angular/animations": "14.1.3",
+    "@angular/cdk": "14.1.2",
+    "@angular/common": "14.1.3",
+    "@angular/compiler": "14.1.3",
+    "@angular/core": "14.1.3",
+    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/forms": "14.1.3",
+    "@angular/google-maps": "^14.2.0",
+    "@angular/material": "14.1.2",
+    "@angular/platform-browser": "14.1.3",
+    "@angular/platform-browser-dynamic": "14.1.3",
+    "@angular/platform-server": "~14.1.3",
+    "@angular/router": "14.1.3",
+    "@ngu/carousel": "^6.0.1",
+    "@nguniversal/express-engine": "^14.1.0",
+    "@types/google.analytics": "0.0.42",
+    "@types/google.maps": "^3.50.0",
+    "@types/hammerjs": "^2.0.41",
+    "angular-in-memory-web-api": "~0.14.0",
+    "cookieconsent": "^3.1.1",
+    "core-js": "^3.25.0",
+    "express": "^4.18.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "latest-version": "^5.1.0",
-    "ngx-device-detector": "^2.0.5",
-    "postcss": "^8.3.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "latest-version": "^7.0.0",
+    "ngx-cookieconsent": "^2.2.3",
+    "ngx-device-detector": "^4.0.1",
+    "postcss": "^8.4.16",
+    "rxjs": "~7.5.6",
+    "rxjs-compat": "^6.6.7",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.2",
-    "@angular/cli": "~12.0.2",
-    "@angular/compiler-cli": "~12.0.2",
-    "@angular/language-service": "^12.0.2",
-    "@nguniversal/builders": "^12.0.1",
-    "@types/express": "^4.17.8",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^6.0.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "@angular-devkit/build-angular": "14.1.3",
+    "@angular/cli": "14.1.3",
+    "@angular/compiler-cli": "14.1.3",
+    "@angular/language-service": "14.1.3",
+    "@nguniversal/builders": "^14.1.0",
+    "@types/express": "^4.17.13",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.7.15",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "^7.0.0",
-    "ts-node": "^8.3.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.6.2"
   }
 }
