--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookieconsent": "^3.1.1",
     "ngx-cookieconsent": "^2.2.3",
     "ngx-device-detector": "^4.0.1",
+    "ngx-cookie-service": "^14.0.1",
     "postcss": "^8.4.16",
     "rxjs": "~7.5.6",
     "rxjs-compat": "^6.6.7",
