--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/hvtdp.png"
             ],
             "styles": [
               "src/styles.css",
@@ -80,7 +80,7 @@
             ],
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/hvtdp.png"
             ]
           }
         },
