--- a/package.json
+++ b/package.json
@@ -5,60 +5,55 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:ssr": "ng run hvtdp:serve-ssr",
-    "serve:ssr": "node dist/server/main.js",
-    "build:ssr": "ng build --prod && ng run hvtdp:server:production",
-    "prerender": "ng run hvtdp:prerender"
+    "serve:ssr:hvtdp": "node dist/hvtdp/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.3",
-    "@angular/cdk": "14.1.2",
-    "@angular/common": "14.1.3",
-    "@angular/compiler": "14.1.3",
-    "@angular/core": "14.1.3",
-    "@angular/flex-layout": "^14.0.0-beta.40",
-    "@angular/forms": "14.1.3",
-    "@angular/google-maps": "^14.2.0",
-    "@angular/material": "14.1.2",
-    "@angular/platform-browser": "14.1.3",
-    "@angular/platform-browser-dynamic": "14.1.3",
-    "@angular/platform-server": "~14.1.3",
-    "@angular/router": "14.1.3",
-    "@ngu/carousel": "^6.0.1",
-    "@nguniversal/express-engine": "^14.1.0",
+    "@angular/animations": "21.0.3",
+    "@angular/cdk": "21.0.2",
+    "@angular/common": "21.0.3",
+    "@angular/compiler": "21.0.3",
+    "@angular/core": "21.0.3",
+    "@angular/forms": "21.0.3",
+    "@angular/google-maps": "21.0.2",
+    "@angular/material": "21.0.2",
+    "@angular/platform-browser": "21.0.3",
+    "@angular/platform-browser-dynamic": "21.0.3",
+    "@angular/platform-server": "~21.0.3",
+    "@angular/router": "21.0.3",
+    "@angular/ssr": "^21.0.2",
     "@types/google.analytics": "0.0.42",
     "@types/google.maps": "^3.50.0",
     "@types/hammerjs": "^2.0.41",
-    "angular-in-memory-web-api": "~0.14.0",
+    "cookieconsent": "^3.1.1",
     "core-js": "^3.25.0",
-    "express": "^4.18.1",
+    "express": "^5.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "latest-version": "^7.0.0",
-    "cookieconsent": "^3.1.1",
+    "ngx-cookie-service": "^14.0.1",
     "ngx-cookieconsent": "^2.2.3",
     "ngx-device-detector": "^4.0.1",
-    "ngx-cookie-service": "^14.0.1",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.47",
     "rxjs": "~7.5.6",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.8"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.3",
-    "@angular/cli": "14.1.3",
-    "@angular/compiler-cli": "14.1.3",
-    "@angular/language-service": "14.1.3",
-    "@nguniversal/builders": "^14.1.0",
-    "@types/express": "^4.17.13",
+    "@angular-devkit/build-angular": "21.0.2",
+    "@angular/cli": "21.0.2",
+    "@angular/compiler-cli": "21.0.3",
+    "@angular/language-service": "21.0.3",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.7.15",
+    "autoprefixer": "^10.4.20",
+    "browser-sync": "^3.0.0",
     "codelyzer": "^6.0.2",
     "jasmine-core": "^4.4.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -70,8 +65,9 @@
     "prettier": "2.8.8",
     "prettier-eslint": "^16.3.0",
     "protractor": "^7.0.0",
+    "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.6.2"
+    "typescript": "^5.9.3"
   }
 }
