--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,16 +4,14 @@
     "outDir": "./out-tsc/app",
     "baseUrl": "./",
     "module": "es2020",
-    "types": [],
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2020",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2020", "dom"]
+    "types": []
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.spec.ts", "src/test.ts", "src/app/app.server.module.ts"]
 }
