--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,6 +12,6 @@
     "types": []
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.d.ts"],
   "exclude": ["src/**/*.spec.ts", "src/test.ts", "src/app/app.server.module.ts"]
 }
